# ARROWBOT-MANIPULATOR-FOR-WAREHOUSE-AUTOMATION

./: LICENSE  README.md  Readme.md
arrowbot_manipulator/: CMakeLists.txt  package.xml
arrowbot_manipulator/config/: joint_names_arrowbot_manip.yaml  manipulator_final.yaml
arrowbot_manipulator/config/ur5/: visual_parameters.yaml
arrowbot_manipulator/launch/: display.launch  gazebo.launch  manipulator.launch
arrowbot_manipulator/meshes/: base_link.STL  front_left_steering_link.STL  front_left_traction_link.STL  front_right_steering_link.STL  front_right_traction_link.STL  rear_left_traction_link.STL  rear_right_traction_link.STL
arrowbot_manipulator/src/: PickAndPlace-InverseKinematicsGeometricMethod.py  PickAndPlaceUsingKnownJointAngles.py  circle.py  ikSolverUR5.m
arrowbot_manipulator/urdf/: arrowbot_manipulator.csv  arrowbot_manipulator_final.urdf  ur5.xacro  ydlidar.urdf
arrowbot_manipulator/urdf/inc/: ur5_macro.xacro  ur_macro.xacro
arrowbot_manipulator/world/: trial_001.world
arrowbot_manipulator/xacro/: my_robot_integration.urdf.xacro
